--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
           <span>image</span>
         </div>
         <div class="col-sm-4">
-          <input type="file" accept="image/*" name="image" (change)="imageUpload($event)">
+          <input type="file"  name="image" (change)="imageUpload($event)">
         </div>
         <div class="col-sm-5">
           <img [src]="previewUrl" alt="" style="width: 100px;
@@ -39,13 +39,34 @@
       <div class="card-body">
         <p class="card-text">{{status.description}}</p>
       </div>
-      <img class="card-img-bottom" [src]="status.image" alt="" style="width:100%">
+        <ng-container *ngIf="selectType(status)==='image'">
+          <img class="card-img-bottom" [src]="status.image" alt="" style="width:100%">
+        </ng-container>
+        <ng-container *ngIf="selectType(status)==='video'">
+          <div class="video">
+              <video class="card-img-bottom" style="width: 452px" controls (click)="toggleVideo()" #videoPlayer>
+                  <source src="{{status.image}}" type="video/mp4" />
+                  Browser not supported
+              </video>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="selectType(status)==='audio'">
+          <div class="audio">
+            <audio style="width: 452px" controls (click)="toggleAudio()" #audioOption>
+              <source src="{{status.image}}" type="audio/mp3">
+            </audio>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="selectType(status)==='file'">
+          <a (click)="downloadfile(status.image)">documentfile download</a>
+              <!-- <ngx-doc-viewer  [url]="status.image" viewer="google" style="width:100%;height:50vh;"></ngx-doc-viewer> -->
+        </ng-container>
       <div class="card-footer">
         <ng-container *ngIf="status.likeid=='true';else unlike">
-          <img src='assets/like64bit.png' (click)="likePage(status,false)">
+          <img style="height: 30px;" src='assets/like64bit.png' (click)="likePage(status,false)">
         </ng-container>
         <ng-template #unlike>
-          <img src='assets/unlike64bit.png' (click)="likePage(status,true)">
+          <img style="height: 30px;" src='assets/unlike64bit.png' (click)="likePage(status,true)">
         </ng-template>
         <label>like{{status.totallike}}</label>
       </div>
